--- a/src/librarymanagement/LBXML.fxml
+++ b/src/librarymanagement/LBXML.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXRadioButton?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -215,6 +216,15 @@
                   <Label fx:id="stypelab" layoutX="14.0" layoutY="11.0" prefHeight="17.0" prefWidth="81.0" style="-fx-background-color: gray;" text="    " textFill="#fcfafa" />
                </children>
             </Pane>
+            <Pane fx:id="commentpane" layoutX="67.0" layoutY="152.0" prefHeight="200.0" prefWidth="347.0" style="-fx-background-color: gray;" visible="false">
+               <children>
+                  <Label layoutX="94.0" layoutY="26.0" prefHeight="17.0" prefWidth="157.0" text="Write Your Comment Bellow" />
+                  <JFXTextField fx:id="commentfield" layoutX="41.0" layoutY="57.0" prefHeight="25.0" prefWidth="261.0" />
+                  <Button layoutX="196.0" layoutY="115.0" mnemonicParsing="false" onAction="#comsubButtonAction" prefHeight="25.0" prefWidth="107.0" text="Submit" />
+                  <Label fx:id="comsubnotilab" layoutX="57.0" layoutY="159.0" prefHeight="17.0" prefWidth="267.0" textFill="#f81105" />
+               </children>
+            </Pane>
+            <Label fx:id="comlabButton" layoutX="251.0" layoutY="55.0" onMouseClicked="#act5" prefHeight="32.0" prefWidth="114.0" style="-fx-background-color: gray;" text="       Comment" visible="false" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="librarianNavigation" layoutX="258.0" layoutY="170.0" prefHeight="294.0" prefWidth="462.0" style="-fx-background-color: #f46542; -fx-border-color: gray;" visible="false">
@@ -602,7 +612,7 @@
             <Label fx:id="aut_neg_exit_lab" layoutX="134.0" layoutY="4.0" onMouseClicked="#act3" prefHeight="17.0" prefWidth="23.0" text="  X" />
          </children>
       </Pane>
-      <Pane fx:id="controller_home_pane" layoutX="241.0" layoutY="138.0" prefHeight="365.0" prefWidth="484.0" style="-fx-background-color: lightgray;" visible="false">
+      <Pane fx:id="controller_home_pane" layoutX="241.0" layoutY="138.0" prefHeight="365.0" prefWidth="484.0" style="-fx-background-color: lightgray;">
          <children>
             <Pane layoutX="7.0" layoutY="8.0" prefHeight="62.0" prefWidth="470.0" style="-fx-background-color: gray;">
                <children>
