--- a/src/librarymanagement/LBXML.fxml
+++ b/src/librarymanagement/LBXML.fxml
@@ -283,7 +283,7 @@
                         <Font size="18.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton fx:id="settinglab" layoutX="10.0" layoutY="210.0" onAction="#settingButtonAction" prefHeight="25.0" prefWidth="157.0" style="-fx-background-color: #873511;" text="Setting" textFill="#f5f3f3">
+                  <JFXButton fx:id="settinglab" layoutX="10.0" layoutY="212.0" onAction="#settingButtonAction" prefHeight="25.0" prefWidth="157.0" style="-fx-background-color: #873511;" text="Add Book" textFill="#f5f3f3">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -612,7 +612,7 @@
             <Label fx:id="aut_neg_exit_lab" layoutX="134.0" layoutY="4.0" onMouseClicked="#act3" prefHeight="17.0" prefWidth="23.0" text="  X" />
          </children>
       </Pane>
-      <Pane fx:id="controller_home_pane" layoutX="241.0" layoutY="138.0" prefHeight="365.0" prefWidth="484.0" style="-fx-background-color: lightgray;">
+      <Pane fx:id="controller_home_pane" layoutX="241.0" layoutY="138.0" prefHeight="365.0" prefWidth="484.0" style="-fx-background-color: lightgray;" visible="false">
          <children>
             <Pane layoutX="7.0" layoutY="8.0" prefHeight="62.0" prefWidth="470.0" style="-fx-background-color: gray;">
                <children>
