--- a/src/librarymanagement/LBXML.fxml
+++ b/src/librarymanagement/LBXML.fxml
@@ -676,7 +676,7 @@
               <columns>
                 <TableColumn fx:id="slbtabun" prefWidth="90.0" text="UserName" />
                 <TableColumn fx:id="slbtabpass" prefWidth="107.0" text="Password" />
-                  <TableColumn fx:id="slbtabdue" prefWidth="78.0" text="Due" />
+                  <TableColumn fx:id="slbtabdue" prefWidth="78.0" text="Std-Type" />
               </columns>
             </TableView>
             <Pane fx:id="slbsalarypane" layoutX="99.0" layoutY="83.0" prefHeight="271.0" prefWidth="290.0" visible="false">
