--- a/src/librarymanagement/LBXML.fxml
+++ b/src/librarymanagement/LBXML.fxml
@@ -55,7 +55,7 @@
                   <Font size="21.0" />
                </font>
             </JFXButton>
-            <JFXButton alignment="CENTER" layoutX="10.0" layoutY="350.0" prefHeight="50.0" prefWidth="220.0" style="-fx-border-color: white; -fx-background-color: #fc8f5f; -fx-border-radius: 5;" text="About" textFill="#512d0a">
+            <JFXButton alignment="CENTER" layoutX="10.0" layoutY="350.0" onAction="#se_but_action" prefHeight="50.0" prefWidth="220.0" style="-fx-border-color: white; -fx-background-color: #fc8f5f; -fx-border-radius: 5;" text="Service Employee" textFill="#512d0a">
                <font>
                   <Font size="21.0" />
                </font>
@@ -701,6 +701,57 @@
                </children>
             </Pane>
             <Label fx:id="seni_sub_con_noti_lab" layoutX="114.0" layoutY="305.0" prefHeight="17.0" prefWidth="261.0" />
+         </children>
+      </Pane>
+      <Pane fx:id="se_pane" layoutX="241.0" layoutY="138.0" prefHeight="365.0" prefWidth="484.0" style="-fx-background-color: lightgray;" visible="false">
+         <children>
+            <Button layoutX="403.0" layoutY="17.0" mnemonicParsing="false" onAction="#se_logout_but_action" text="LogOut" />
+            <Pane layoutX="240.0" layoutY="54.0" prefHeight="288.0" prefWidth="229.0" style="-fx-background-color: gray;">
+               <children>
+                  <TextField fx:id="exe_sal_field" layoutX="122.0" layoutY="23.0" prefHeight="25.0" prefWidth="93.0" />
+                  <TextField fx:id="ine_sal_field" layoutX="123.0" layoutY="52.0" prefHeight="25.0" prefWidth="93.0" />
+                  <TextField fx:id="exe_eid_bon_field" layoutX="122.0" layoutY="87.0" prefHeight="25.0" prefWidth="94.0" />
+                  <TextField fx:id="ine_eid_bon_field" layoutX="122.0" layoutY="115.0" prefHeight="25.0" prefWidth="94.0" />
+                  <TextField fx:id="exe_ext_bon_field" layoutX="124.0" layoutY="149.0" prefHeight="25.0" prefWidth="93.0" />
+                  <TextField fx:id="reg_ext_bon_field" layoutX="124.0" layoutY="177.0" prefHeight="25.0" prefWidth="93.0" />
+                  <TextField fx:id="sts_ext_bon_field" layoutX="124.0" layoutY="205.0" prefHeight="25.0" prefWidth="93.0" />
+                  <Label layoutX="23.0" layoutY="31.0" text="Input EXE Salary:" />
+                  <Label layoutX="25.0" layoutY="55.0" text="Input INE Salary:" />
+                  <Label layoutX="7.0" layoutY="90.0" text="Input EXE Eid Bnous:" />
+                  <Label layoutX="7.0" layoutY="118.0" text="Input INE Eid Bnous:" />
+                  <Label layoutX="9.0" layoutY="153.0" text="Input EXE Ext Bnous:" />
+                  <Label layoutX="13.0" layoutY="179.0" text="Input Reg Ext Bnous:" />
+                  <Label layoutX="13.0" layoutY="208.0" text="Input STS Ext Bnous:" />
+               </children>
+            </Pane>
+            <Pane layoutX="14.0" layoutY="54.0" prefHeight="288.0" prefWidth="218.0" style="-fx-background-color: gray;">
+               <children>
+                  <Label layoutX="35.0" layoutY="10.0" text="External Service Employee" textFill="#e40505" />
+                  <Label layoutX="35.0" layoutY="33.0" text="Total Salary:" />
+                  <Label layoutX="35.0" layoutY="73.0" text="Extra Bonus:" />
+                  <Label layoutX="43.0" layoutY="52.0" text="Eid Bonus:" />
+                  <Label layoutX="33.0" layoutY="97.0" text="Internal service Employee" textFill="#ee0808" />
+                  <Label layoutX="76.0" layoutY="117.0" text="Register" textFill="#e43b15" />
+                  <Label layoutX="57.0" layoutY="196.0" text="Std Things Saver" textFill="#e43939" />
+                  <Label layoutX="41.0" layoutY="138.0" text="Total Salary:" />
+                  <Label layoutX="41.0" layoutY="176.0" text="Extra Bonus:" />
+                  <Label layoutX="49.0" layoutY="157.0" text="Eid Bonus:" />
+                  <Label layoutX="45.0" layoutY="218.0" text="Total Salary:" />
+                  <Label layoutX="45.0" layoutY="258.0" text="Extra Bonus:" />
+                  <Label layoutX="53.0" layoutY="237.0" text="Eid Bonus:" />
+                  <Label fx:id="e_sal_lab" layoutX="104.0" layoutY="34.0" prefHeight="17.0" prefWidth="100.0" />
+                  <Label layoutX="119.0" layoutY="61.0" prefHeight="17.0" prefWidth="100.0" />
+                  <Label fx:id="e_ei_bon_lab" layoutX="102.0" layoutY="53.0" prefHeight="17.0" prefWidth="100.0" />
+                  <Label fx:id="e_ex_bon_lab" layoutX="101.0" layoutY="72.0" prefHeight="17.0" prefWidth="100.0" />
+                  <Label fx:id="re_sal_lab" layoutX="108.0" layoutY="139.0" prefHeight="17.0" prefWidth="100.0" />
+                  <Label fx:id="re_ei_bon_lab" layoutX="107.0" layoutY="159.0" prefHeight="17.0" prefWidth="100.0" />
+                  <Label fx:id="re_ex_bon_lab" layoutX="107.0" layoutY="176.0" prefHeight="17.0" prefWidth="100.0" />
+                  <Label fx:id="st_sal_lab" layoutX="112.0" layoutY="219.0" prefHeight="17.0" prefWidth="100.0" />
+                  <Label fx:id="st_ei_lab" layoutX="111.0" layoutY="237.0" prefHeight="17.0" prefWidth="100.0" />
+                  <Label fx:id="st_ex_lab" layoutX="111.0" layoutY="259.0" prefHeight="17.0" prefWidth="100.0" />
+               </children>
+            </Pane>
+            <Button layoutX="399.0" layoutY="296.0" mnemonicParsing="false" onAction="#se_sub_but_action" text="Submit" />
          </children>
       </Pane>
    </children>
